# Chatbot_Rag

./: .env.exemple  .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: python-app.yml
src/: app.py  chain.py  ingest.py  retriever.py
tests/: test_ingest.py
