[tool.poetry]
name = "chatbot-rag"
version = "0.1.0"
description = "RAG chatbot pipeline with LangChain and ChromaDB"
authors = ["paskal nicolas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = "^1.3.9"
langchain-openai = "^1.3.2"
langchain-community = "^0.4.2"
chromadb = "^1.5.9"
streamlit = "^1.58.0"
pypdf2 = "^3.0.1"
loguru = "^0.7.3"
python-dotenv = "^1.2.2"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
